--- a/styles.css
+++ b/styles.css
@@ -4,7 +4,7 @@ html, body {
   margin: 0;
   padding: 0;
   scroll-behavior: smooth;
-  overflow: hidden; 
+  overflow: hidden;
 }
 
 body {
@@ -57,9 +57,9 @@ header {
 
 .fixed-header nav a{
     position: relative;
-    display: flex; 
+    display: flex;
     align-items: center;
-    justify-content: center; 
+    justify-content: center;
     margin: 0 15px;
     text-decoration: none;
     font-weight: 600;
@@ -73,7 +73,7 @@ header {
     bottom: 0;
     left: 0;
     right: 0;
-    width: 0; 
+    width: 0;
     height: 5px;
     margin: auto;
     background-color: var(--color-accent-primary);
@@ -88,7 +88,7 @@ header {
 
 .fixed-header nav a:hover::before,
 .fixed-header nav a.active::before {
-    width: 100%; 
+    width: 100%;
 }
 
 .main-section, .blocks-section, .text-image-section, .text-section, .contact-section {
@@ -98,8 +98,16 @@ header {
     display: flex;
     justify-content: center;
     align-items: center;
-    padding: min(2rem, 2vw);
     box-sizing: border-box;
+}
+
+.main-section, .text-image-section,  .contact-section {
+    padding: min(2rem, 2vw);
+}
+
+.blocks-section, .text-section {
+    padding: min(2rem, 2vw);
+    padding-top: calc(60px + min(2rem, 2vw));
 }
 
 .main-section .content-wrapper {
@@ -169,7 +177,7 @@ header {
 .blocks-section.active .intro,  .blocks-section.active .list{
     pointer-events: auto;
     animation: fadeListIn 1s ease forwards;
-    animation-delay: 0.6s; 
+    animation-delay: 0.6s;
     transition: none;
 }
 
@@ -206,17 +214,17 @@ header {
 }
 
 .blocks-section.subtype-1 .block {
-    flex: 0 0 calc(33.33% - 2rem); 
+    flex: 0 0 calc(33.33% - 2rem);
     max-width: calc(33.33% - 2rem);
     padding: 0 2rem 0 0;
 }
 
 .blocks-section.subtype-1 .block img {
-    height: 2.5em; 
+    height: 2.5em;
 }
 
 .blocks-section.subtype-1 .block h3 {
-    font-size: 1.2em; 
+    font-size: 1.2em;
 }
 
 .blocks-section.subtype-1 .block p {
@@ -246,7 +254,7 @@ header {
 }
 
 .blocks-section.subtype-2 .block {
-    flex: 0 0 calc(50% - 3rem); 
+    flex: 0 0 calc(50% - 3rem);
     max-width: calc(50% - 3rem);
     padding: 0 3rem 0 0;
 }
@@ -256,11 +264,11 @@ header {
 }
 
 .blocks-section.subtype-2 .block h3 {
-    font-size: 1.5em; 
+    font-size: 1.5em;
 }
 
 .blocks-section.subtype-2 .block p {
-    font-size: 1rem; 
+    font-size: 1rem;
 }
 
 @media (max-width: 768px) {
@@ -361,7 +369,7 @@ header {
 
 .text-image-section .text-area span, .text-section .title-area span, .contact-section .form-area span{
     font-size: 0.8rem;
-    color: var(--color-accent-primary);
+    color: var(--color-accent-secondary);
     text-transform: uppercase;
     margin-bottom: 0.5rem;
     font-weight: 600;
@@ -377,24 +385,32 @@ header {
     position: relative;
     width: 100%;
 }
-.quote {
+.quote-container{
     position: absolute;
-    top: 5rem;
-    left: 2rem;
-    display: block;
-    width: auto;
-    margin: 1.5rem;
-    padding: 0.5rem;
-    line-height: 30px;
-    border-left: 2px solid var(--color-accent-primary);
-    border-radius: 5px;
+    top: calc(60px + 8rem);
+    left: 0;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.quote {
+    max-width: 1200px;
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
     z-index: 999;
     opacity: 0;
 }
 
 .quote blockquote {
+    line-height: 30px;
+    border-left: 2px solid var(--color-accent-primary);
+    border-radius: 5px;
     margin: 0;
-    padding: 0;
+    padding: 0.5rem;
     font-style: italic;
     font-size: 1.3rem;
     color:var(--color-accent-primary);
@@ -488,7 +504,7 @@ blockquote p::after {
     flex: 3;
     font-size: 1.1rem;
     line-height: 1.6;
-    color: var(--color-text-primary);
+    color: var(--color-text-secondary);
     font-family: var(--heading-font, Arial, sans-serif);
     margin: 0;
     opacity: 0;
@@ -677,8 +693,8 @@ button {
 }
 
 .contact-section footer .social-icon {
-    width: 2rem;
-    height: 2rem;
+    width: 3rem;
+    height: 3rem;
     object-fit: contain;
 }
 
@@ -801,7 +817,7 @@ button {
 
 @media (max-width: 768px) {
 
-    html, body { 
+    html, body {
         overflow: auto;
         overscroll-behavior-y: auto;
     }
@@ -956,7 +972,8 @@ button {
     }
 
     .quote {
-        max-width: 100vw;
+        max-width: 90vw;
+        flex-direction: column;
     }
 
     .blocks-section .block {
